--- a/src/LazyData/LazyData.csproj
+++ b/src/LazyData/LazyData.csproj
@@ -1,116 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7BA9E2BF-9978-428E-AEC5-A040F3E86AB7}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LazyData</RootNamespace>
-    <AssemblyName>LazyData</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Attributes\DynamicTypeAttribute.cs" />
-    <Compile Include="Attributes\PersistAttribute.cs" />
-    <Compile Include="Attributes\PersistDataAttribute.cs" />
-    <Compile Include="DataObject.cs" />
-    <Compile Include="DefaultEncoding.cs" />
-    <Compile Include="Exceptions\NoKnownTypeException.cs" />
-    <Compile Include="Exceptions\TypeNotPersistableException.cs" />
-    <Compile Include="Extensions\IListExtensions.cs" />
-    <Compile Include="Extensions\ReflectionExtensions.cs" />
-    <Compile Include="Extensions\TypeExtensions.cs" />
-    <Compile Include="Mappings\CollectionMapping.cs" />
-    <Compile Include="Mappings\DictionaryMapping.cs" />
-    <Compile Include="Mappings\Mappers\DefaultTypeMapper.cs" />
-    <Compile Include="Mappings\Mappers\EverythingTypeMapper.cs" />
-    <Compile Include="Mappings\Mappers\ITypeMapper.cs" />
-    <Compile Include="Mappings\Mappers\MappingConfiguration.cs" />
-    <Compile Include="Mappings\Mappers\TypeMapper.cs" />
-    <Compile Include="Mappings\Mapping.cs" />
-    <Compile Include="Mappings\NestedMapping.cs" />
-    <Compile Include="Mappings\PropertyMapping.cs" />
-    <Compile Include="Mappings\TypeMapping.cs" />
-    <Compile Include="Mappings\Types\ITypeAnalyzer.cs" />
-    <Compile Include="Mappings\Types\ITypeCreator.cs" />
-    <Compile Include="Mappings\Types\MappingConfiguration.cs" />
-    <Compile Include="Mappings\Types\TypeAnalyzer.cs" />
-    <Compile Include="Mappings\Types\TypeCreator.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registries\IMappingRegistry.cs" />
-    <Compile Include="Registries\MappingRegistry.cs" />
-    <Compile Include="Serialization\Binary\BinaryConfiguration.cs" />
-    <Compile Include="Serialization\Binary\BinaryDeserializer.cs" />
-    <Compile Include="Serialization\Binary\BinaryPrimitiveDeserializer.cs" />
-    <Compile Include="Serialization\Binary\BinaryPrimitiveSerializer.cs" />
-    <Compile Include="Serialization\Binary\BinarySerializer.cs" />
-    <Compile Include="Serialization\Binary\IBinaryDeserializer.cs" />
-    <Compile Include="Serialization\Binary\IBinarySerializer.cs" />
-    <Compile Include="Serialization\Debug\DebugSerializer.cs" />
-    <Compile Include="Serialization\GenericDeserializer.cs" />
-    <Compile Include="Serialization\GenericSerializer.cs" />
-    <Compile Include="Serialization\IDeserializer.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Serialization\ITypeHandler.cs" />
-    <Compile Include="Serialization\Json\IJsonDeserializer.cs" />
-    <Compile Include="Serialization\Json\IJsonSerializer.cs" />
-    <Compile Include="Serialization\Json\JsonConfiguration.cs" />
-    <Compile Include="Serialization\Json\JsonDeserializer.cs" />
-    <Compile Include="Serialization\Json\JsonPrimitiveDeserializer.cs" />
-    <Compile Include="Serialization\Json\JsonPrimitiveSerializer.cs" />
-    <Compile Include="Serialization\Json\JsonSerializer.cs" />
-    <Compile Include="Serialization\SerializationConfiguration.cs" />
-    <Compile Include="Serialization\Xml\IXmlDeserializer.cs" />
-    <Compile Include="Serialization\Xml\IXmlSerializer.cs" />
-    <Compile Include="Serialization\Xml\XmlConfiguration.cs" />
-    <Compile Include="Serialization\Xml\XmlDeserializer.cs" />
-    <Compile Include="Serialization\Xml\XmlPrimitiveDeserializer.cs" />
-    <Compile Include="Serialization\Xml\XmlPrimitiveSerializer.cs" />
-    <Compile Include="Serialization\Xml\XmlSerializer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
