Updated projects, and also have the performance tests running.

--- a/src/LazyData.Numerics/LazyData.Numerics.csproj
+++ b/src/LazyData.Numerics/LazyData.Numerics.csproj
@@ -8,7 +8,7 @@
     <ProjectReference Include="..\LazyData\LazyData.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <Reference Include="System.Numerics.Vectors">
       <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\System.Numerics.Vectors.dll</HintPath>
     </Reference>
