--- a/src/LazyData.PerformanceTests/LazyData.PerformanceTests.csproj
+++ b/src/LazyData.PerformanceTests/LazyData.PerformanceTests.csproj
@@ -2,11 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LazyData.Tests\LazyData.Tests.csproj" />
+    <Compile Remove="BenchmarkDotNet.Artifacts\**" />
+    <EmbeddedResource Remove="BenchmarkDotNet.Artifacts\**" />
+    <None Remove="BenchmarkDotNet.Artifacts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LazyData\LazyData.csproj" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.10.13" />
   </ItemGroup>
 
 </Project>
