--- a/src/LazyData.Numerics/LazyData.Numerics.csproj
+++ b/src/LazyData.Numerics/LazyData.Numerics.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>0.0.0</Version>
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <Title>LazyData.Numerics</Title>
     <Authors>Grofit (LP)</Authors>
