--- a/src/LazyData.SuperLazy/LazyData.SuperLazy.csproj
+++ b/src/LazyData.SuperLazy/LazyData.SuperLazy.csproj
@@ -11,6 +11,9 @@
     <PackageTags>serialization game-development json xml binary</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LazyData.Binary\LazyData.Binary.csproj" />
+    <ProjectReference Include="..\LazyData.Json\LazyData.Json.csproj" />
+    <ProjectReference Include="..\LazyData.Xml\LazyData.Xml.csproj" />
     <ProjectReference Include="..\LazyData\LazyData.csproj">
       <Project>{8AE4F137-FCFB-4B1C-B8E0-CE6CF98EE3D9}</Project>
       <Name>LazyData</Name>
