--- a/src/LazyData.Tests/LazyData.Tests.csproj
+++ b/src/LazyData.Tests/LazyData.Tests.csproj
@@ -10,11 +10,13 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LazyData.Bson\LazyData.Bson.csproj" />
     <ProjectReference Include="..\LazyData.Numerics\LazyData.Numerics.csproj" />
     <ProjectReference Include="..\LazyData.SuperLazy\LazyData.SuperLazy.csproj">
       <Project>{9ADF5C4D-B71B-46E8-8811-D855259C79BB}</Project>
       <Name>LazyData.SuperLazy</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LazyData.Yaml\LazyData.Yaml.csproj" />
     <ProjectReference Include="..\LazyData\LazyData.csproj">
       <Project>{8AE4F137-FCFB-4B1C-B8E0-CE6CF98EE3D9}</Project>
       <Name>LazyData</Name>
