[COMMIT] The proj files have been updated to enable SourceLink [LazyData.Yaml.csproj]

--- a/src/LazyData.Yaml/LazyData.Yaml.csproj
+++ b/src/LazyData.Yaml/LazyData.Yaml.csproj
@@ -10,7 +10,16 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <Description>Yaml serializer for use with LazyData</Description>
         <PackageTags>serialization game-development yaml</PackageTags>
-    </PropertyGroup>
+    
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
     <ItemGroup>
       <PackageReference Include="YamlDotNet" Version="5.0.1" />
